--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "algorithm-visualizer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/server/server.js",
@@ -21,9 +20,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "eslint": "^8.55.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
