--- a/package.json
+++ b/package.json
@@ -2,36 +2,36 @@
   "name": "algorithm-visualizer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server/server.js",
+    "start": "nodemon src/server/server.ts",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack serve"
+    "dev": "NODE_ENV=development webpack serve & npm start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/preset-env": "^7.23.5",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
     "express": "^4.18.2",
-    "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "eslint": "^8.55.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "style-loader": "^3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
