--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "semi": "off",
         "@typescript-eslint/semi": ["warn", "always"],
         "no-multiple-empty-lines": ["warn", {"max": 2}],
-        "@typescript-eslint/no-var-requires": "off"
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/consistent-indexed-object-style": ["warn", "index-signature"]
     }
 }
