--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "nodemon src/server/server.ts",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development concurrently \"webpack serve\" \"nodemon src/server/server.ts\" --kill-others"
@@ -16,14 +16,18 @@
     "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
+    "@shelf/jest-mongodb": "^4.2.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
@@ -41,6 +45,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
