--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "bcryptjs": "^2.4.3",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
