Work on merge sort algorithm, completes the algo with correct  highlights

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,25 @@
-// {
-//     "env": {
-//         "browser": true,
-//         "commonjs": true,
-//         "es2021": true,
-//         "node": true
-//     },
-//     "extends": [
-//         "standard-with-typescript",
-//         "plugin:react/recommended"
-//     ],
-//     "parserOptions": {
-//         "ecmaVersion": "latest"
-//     },
-//     "plugins": [
-//         "react"
-//     ],
-//     "rules": {
-//     }
-// }
+{
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "standard-with-typescript",
+        "plugin:react/recommended"
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+        "semi": "off",
+        "@typescript-eslint/semi": ["warn", "always"],
+        "no-multiple-empty-lines": ["warn", {"max": 2}],
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/consistent-indexed-object-style": ["warn", "index-signature"]
+    }
+}
