--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist",
       "sourceMap": true,
-      "jsx": "react"
+      "jsx": "react",
+      "strictNullChecks": true,
     },
     "include": ["src/**/*.tsx", "src/client/index.tsx"],
     "exclude": ["node_modules"]
