--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "@typescript-eslint/semi": ["warn", "always"],
         "no-multiple-empty-lines": ["warn", {"max": 2}],
         "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/consistent-indexed-object-style": ["warn", "index-signature"]
+        "@typescript-eslint/consistent-indexed-object-style": ["warn", "index-signature"],
+        "@typescript-eslint/strict-boolean-expressions": "off"
     }
 }
