write cookie controller functions and tests for them

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
       "warn",
       "index-signature"
     ],
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/consistent-type-definitions": "off"
   }
 }
