--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest --verbose",
     "start": "nodemon src/server/server.ts",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development concurrently \"webpack serve\" \"nodemon src/server/server.ts\" --kill-others"
+    "dev": "NODE_ENV=development concurrently \"webpack serve --open\" \"nodemon src/server/server.ts\" --kill-others"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -44,6 +45,7 @@
     "eslint-plugin-react": "^7.33.2",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
+    "node-mocks-http": "^1.13.0",
     "nodemon": "^3.0.2",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
