--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "react-router-dom": "^6.20.1",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
